管理员备份和还原，记得看readme

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,20 @@ spring:
       url: jdbc:mysql://${club-management.datasource.host}:${club-management.datasource.port}/${club-management.datasource.database}?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
       username: ${club-management.datasource.username}
       password: ${club-management.datasource.password}
+#  cloud:
+#    gateway:
+#      routes:
+#        - id: local-service
+#          uri: http://localhost:8080
+#          predicates:
+#            - Path=/members/**
+#            - Path=/user/**
+#            - Path=/summaries/**
+#            - Path=/admin/**
+#            - Path=/clubs/**
+#            - Path=/activities/**
+
+
 
 mybatis:
   #mapper配置文件
